# Mobile-App

./: .gitignore  CLAUDE.md  Secrets 2.xcconfig
Data/: AppModelContainer.swift
DateApp/: AppDelegate.swift  ContentView.swift  DateAppApp.swift  Info.plist  Item.swift
DateApp.xcodeproj/: project.pbxproj
Models/: Models.swift  TMDBService.swift
Network/: APIClient.swift  (+2 more)
backend/: .env.example  .env.production.example  alembic.ini  pyproject.toml  render.yaml  requirements.txt
backend/app/: main.py
backend/app/api/v1/: ad.py  auth.py  boost.py  chat.py  discover.py  likes.py  matches.py  notifications.py  onboarding.py  reports.py  swipes.py  users.py  vip.py
backend/app/core/: config.py  dependencies.py  security.py
backend/app/db/: models.py  session.py
backend/app/db/migrations/: env.py  script.py.mako
backend/app/db/migrations/versions/: 0001_initial_schema.py  0002_add_password_hash.py  0003_add_chat_and_indexes.py  0004_add_blocks_reports_apns.py  0005_add_is_admin_column.py  0006_vip_tickets_to_db.py  0007_add_telefon_column.py  0008_add_boy_column.py  0009_add_okundu_to_chat.py  9e6d52e560a9_add_turler_to_kullanici.py
backend/app/schemas/: auth.py  discover.py  swipe.py  user.py  vip.py
backend/app/services/: ad_service.py  auth_service.py  discover_service.py  notification_service.py  password_service.py  report_service.py  sms_service.py  storage_service.py  swipe_service.py  tmdb_service.py  vip_service.py
backend/tests/: test_ad.py  test_auth.py  test_chat.py  test_ios_backend.py  test_reports.py  test_swipes.py  test_vip.py
(+50 files in other folders)
